# reusable-doc-ai-package

./: .pre-commit-config.yaml  README.md  build_package.sh  exceptions.py  read_pdf_or_image_files.py  requirements.txt  setup.cfg
.github/workflows/: validate-lint.yaml
reusable_code/: measure_processing_time.py  process_document.py
