[metadata]
name = reusable-code-for-document-ai
# Remember that you cannot upload your Python package multiple times with the same version.
version = 0.0.9
author = Muazzem
author_email = muazzem.mamun@gmail.com.com
description = Reusable code for Google Document-AI services
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True